# cpp20_masterclass

./: CMakeLists.txt  conanfile.txt  main.cpp
cppoop/: YouTubeChannel.cpp  YouTubeChannel.h
lessons/: Calculator.cpp  Calculator.h  Calendar.cpp  Calendar.h  Lambdaex.cpp  Lambdaex.h  Metaprograming.cpp  Metaprograming.h  Section10.cpp  Section10.h  Section11.cpp  Section11.h  Section12.cpp  Section12.h  Section13.cpp  Section13.h  Section14.cpp  Section14.h  Section15.cpp  Section15.h  Section16.cpp  Section16.h  Section17.cpp  Section17.h  Section19.cpp  Section19.h  Section20.cpp  Section20.h  Section21.cpp  Section21.h  Section22.cpp  Section22.h  Section24.cpp  Section24.h  Section6.cpp  Section6.h  Section7.cpp  Section7.h  Section8.cpp  Section8.h  (+7 more)
