cmake_minimum_required(VERSION 3.20)
project(cpp20_masterclass)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp20_masterclass main.cpp lessons/Section6.cpp lessons/Section6.h lessons/Section7.cpp lessons/Section7.h lessons/Section8.cpp lessons/Section8.h lessons/Section9.cpp lessons/Section9.h lessons/Section10.cpp lessons/Section10.h cppoop/YouTubeChannel.cpp cppoop/YouTubeChannel.h lessons/Section11.cpp lessons/Section11.h)
